log perm and fix circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,8 @@ executors:
   # `macos` uses the macOS machine image.
   macos:
     macos:
-      xcode: 13.4.1
-      resource_class: medium
+      xcode: 14.2.0
+      resource_class: macos.x86.medium.gen2
 
   # `windows` uses the Windows machine image.
   windows:
